# Email-spam-classifier

./: app.py  main.py  pyproject.toml  requirements.txt
model/: vectorizer.pkl
notebooks/: email-spam-classifier.ipynb
